@@ -116,6 +116,9 @@ option is
 .BI "--monitor=" N
 Make the cow appear on monitor N.
 .TP
+.BI "--at=" X,Y
+Force that cow to appear at screen location (X,Y).
+.TP
 .B "--debug"
 Print messages about what
 .B xcowsay
