@@ -1,4 +1,14 @@
-2010-01-04  Nick Gasson  <nick@nickg.me.uk>
+2010-01-03  Nick Gasson  <nick@nickg.me.uk>
+
+	* src/xcowsay.c (main): Add --at option to specify cow location
+	on screen and correspoding at_x and at_y config variables.
+	(parse_position_option): New function to parse options specified
+	as X,Y pairs.
+	* src/display_cow.c (display_cow): Now recognises the at_x and
+	at_y config variables to force cow to appear at a particular
+	position. 
+
+2010-01-02  Nick Gasson  <nick@nickg.me.uk>
 
 	* src/display_cow.c (display_cow): Fix splicing of cow across
 	multiple monitors.  Now picks a random monitor and then a random
